[package]
name = "orqos"
version = "0.1.0"
edition = "2021"
authors = ["Andrea M. <andrea@andreamancuso.dev>"]
license = "MIT"
description = "Docker management tool for Rezn"
repository = "https://github.com/orqos-project/orqos"

[dependencies]
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa = "5"
utoipa-axum = "0.2"

axum = { version = "0.8", features = ["ws"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
sled = "0.34"
ctrlc = "3.4.7"
bollard = "0.19.1"
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "time",
    "signal",
    "macros",
    "sync",
] }
futures = "0.3.31"
futures-util = "0.3.31"
tracing-subscriber = "0.3.19"
rand = "0.9.1"
base64 = "0.22.1"
lazy_static = "1.5.0"
regex = "1.11.1"
tar = "0.4.44"
flate2 = "1.1.2"
infer = "0.19.0"
dashmap = "6.1.0"
